Fix LDAP connection for Linux and non-SSL Active Directory
Discovered and fixed six LDAP connection issues through testing against
a real Active Directory server running on port 389 without SSL:

- Use 3-param LdapConnection constructor to prevent silent NTLM fallback
- Disable referral chasing to avoid unauthenticated follow-on connections
- Set AutoBind=false and call Bind() explicitly for credential control
- Add StartTLS support for optional encryption on port 389
- Catch DirectoryOperationException alongside LdapException (sibling
  types in System.DirectoryServices.Protocols, not parent-child)
- On Linux, set LDAPTLS_REQCERT=never because OpenLDAP's libldap
  ignores .NET's VerifyServerCertificate callback for StartTLS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       - LDAP_PORT=389
       - LDAP_BASE_DN=DC=example,DC=com
       - LDAP_USE_SSL=false
+      - LDAP_START_TLS=true
+      - LDAP_IGNORE_CERT_ERRORS=false
       - CORS_ALLOWED_ORIGINS=http://localhost:3000,https://app.example.com
     restart: unless-stopped
