--- a/src/LdapToRest/LdapToRest.csproj
+++ b/src/LdapToRest/LdapToRest.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.24" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.*" />
     <PackageReference Include="System.DirectoryServices.Protocols" Version="10.0.3" />
   </ItemGroup>
 
