--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   ldap-to-rest:
     build: .
     ports:
-      - "8080:8080"
+      - "${LISTEN_PORT:-8080}:8080"
     environment:
-      - LDAP_HOST=dc01.example.com
-      - LDAP_PORT=389
-      - LDAP_BASE_DN=DC=example,DC=com
-      - LDAP_USE_SSL=false
-      - LDAP_START_TLS=true
-      - LDAP_IGNORE_CERT_ERRORS=false
-      - CORS_ALLOWED_ORIGINS=http://localhost:3000,https://app.example.com
+      - LDAP_HOST=${LDAP_HOST}
+      - LDAP_PORT=${LDAP_PORT:-389}
+      - LDAP_BASE_DN=${LDAP_BASE_DN}
+      - LDAP_USE_SSL=${LDAP_USE_SSL:-false}
+      - LDAP_START_TLS=${LDAP_START_TLS:-true}
+      - LDAP_IGNORE_CERT_ERRORS=${LDAP_IGNORE_CERT_ERRORS:-false}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-}
     restart: unless-stopped
